Fix job details box alignment

--- a/src/assets/stylesheets/job-details.scss
+++ b/src/assets/stylesheets/job-details.scss
@@ -10,7 +10,7 @@
     display: flex;
     margin-bottom: 1rem;
     padding: 1.5rem 1rem;
-    width: 600px;
+    width: 630px;
 
     &--secondary {
       background-color: unset;
